fix(security,ci): Wave 1·2 이행분을 그린으로 만들어 고정한다 — 인증 없는 인가 테스트와 영구 red 계약 게이트
12축 로드맵 Wave 1·2 이행분(다른 오퍼레이터 작업)을 검증하고, 그 상태로는 push 조차 불가능하던
결함 4건을 고쳐 함께 고정한다. 구현 자체는 대부분 정당한 강화였으나 **전부 미커밋**이었고
`git checkout` 한 번에 소실될 상태였다.

## 고친 것 1 — 권한 상승 테스트가 인증을 하지 못했다 (critical)

`PrivilegeEscalationVulnerabilityTest` 3건이 전부 red 였다(`expected:<403> but was:<401>`).
원인은 스텁 축이다 — 테스트는 `getUserId` 를 스텁했는데 프로덕션 필터
(`JwtAuthenticationFilter:38`)가 실제로 부르는 것은 **`getAuthentication(token)`** 이다.
미스텁이라 null 이 반환돼 SecurityContext 가 익명으로 남았고, 익명은 401 이다.

더 중요한 것은 red 였다는 사실보다 **무엇을 증명하지 못했는가** 다. 401 은 "인증 안 된 요청이
막힌다" 는 뜻이라, 클래스 이름이 주장하는 "**일반 사용자**가 관리자 API 에 접근하면 막힌다"
(=수직 권한 상승 방어)를 검증하지 않는다. 이 저장소가 0f52e7e06·ce0163e71 에서 두 차례 고친
"검증하지 않는 것을 이름으로 주장한다" 패턴의 재발이었다.

→ `ROLE_USER` 권한을 가진 Authentication 을 반환하도록 스텁하고, 중복 블록을 헬퍼로 모았다.
→ **대조군 신설**: 인증 없는 같은 요청이 403 이 아니라 **401** 임을 단언한다. 체인이 '인증 여부'와
  '권한 부족'을 실제로 구분함을 증명해, 세 403 단언이 vacuous 하게 통과하는 경우를 배제한다.
  (이 대조군이 없으면 스텁이 다시 빠져도 아무도 모른다 — 실제로 그렇게 됐었다.)

검증: BaseSecurityTest 를 상속하는 3개 클래스(PrivilegeEscalation·AuthenticationBypass·
SignupInputValidationContract) 전부 프로덕션 체인 위에서 BUILD SUCCESSFUL.
아울러 폐기된 `SecurityTestConfig` 를 가리키던 미사용 import 2건을 제거했다.

## 고친 것 2 — api-docs pretty 화가 CI 계약 게이트를 영구 red 로 만들고 있었다 (high, 잠복)

Wave 2 가 `api-docs.json` 을 pretty 로 바꿨다(1줄 282KB → 25,616줄). 라인 단위 diff 가 가능해져
동시 개발 시 머지 충돌이 줄어드는 정당한 개선이다. 그런데 **재생성 경로는 minify 그대로**였다 —
`OpenApiDocumentationTest:61` 이 응답 원문을 그대로 쓴다.

그 결과 CI 가 `./gradlew build -Dopenapi.export.path=api-docs.json`(ci.yml:155)로 덮어쓴 뒤
곧바로 `git diff --exit-code api-docs.json`(ci.yml:183, api-docs-gate)을 돌리면
**내용이 의미상 동일해도 항상 non-empty** → 게이트 영구 red. 로컬에서는 이 경로를 돌 일이 드물어
드러나지 않고, CI 복구 시점에 즉시 터지는 잠복 파손이다.

→ 생성 측을 커밋본과 **바이트 동일**하게 정규화했다. 저장소의 다른 정규화 지점이
  `format:api-docs`(`JSON.stringify(d, null, 2) + '\n'`)이므로 그 출력과 정확히 맞춘다:
  2칸 들여쓰기(객체·배열 모두), `"key": value`(콜론 앞 공백 없음), 빈 컨테이너는 `[]`/`{}`.
  Jackson 기본값은 `"key" : value` 이고 빈 배열을 `[ ]` 로 쓴다 — 포맷터가 둘이면 둘 다 맞아야 한다.

  실측 검증: 커밋본 보존 → 재